# koffeeza

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a9b19810d4e_make_taste_nullable.py  329a6bc2f023_add_preferences_table.py  98553ef6c6e0_initial_tables.py  a1b2c3d4e5f6_add_multi_user_support.py
backend/app/: auth.py  config.py  database.py  enums.py  main.py  schemas.py
backend/app/adapter/: __init__.py  core.py  seed.py
backend/app/engine/: __init__.py  core.py
backend/app/models/: __init__.py  bean.py  grinder.py  machine.py  preference.py  shot.py  user.py
backend/app/rationale/: __init__.py  llm.py  templates.py
backend/app/recall/: core.py
backend/app/routers/: beans.py  grinders.py  machines.py  preferences.py  recall.py  shots.py  users.py
backend/tests/: conftest.py
backend/tests/api/: test_beans.py  test_grinders.py  test_machines.py  test_preferences.py  test_recall.py  test_shots.py  test_users.py
backend/tests/unit/: test_adapter.py  test_engine.py  test_llm_rationale.py  test_models.py  test_rationale.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: BottomNav.tsx  Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: History.test.tsx  History.tsx  LogShot.test.tsx  (+6 more)
(+1 files in other folders)
