[project]
name = "koffeeza-backend"
version = "0.1.0"
description = "Espresso extraction optimization tool — API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "alembic",
    "PyJWT",
    "bcrypt",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"app/routers/*.py" = ["B008"]
"app/auth.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
